--- a/src/locales/pt-br.json
+++ b/src/locales/pt-br.json
@@ -4,5 +4,14 @@
       "Sobre",
       "Habilidades",
       "Projetos"
+    ],
+    "sobre":[
+      "Nícolas Gabriel",
+      "Desenvolvedor Front-End"
     ]
+
+
+
+
+
   }
